[gd_scene load_steps=18 format=2]

[ext_resource path="res://tallk_head.png" type="Texture" id=1]
[ext_resource path="res://tallk_arm.png" type="Texture" id=2]
[ext_resource path="res://tallk_body.png" type="Texture" id=3]
[ext_resource path="res://Tallk.gd" type="Script" id=4]
[ext_resource path="res://Tallk attack.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 0.925756
height = 2.95228

[sub_resource type="Animation" id=2]
resource_name = "Attack left"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Body:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, -10.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/head:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/head:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/front arm:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -30.0, -60.0, 30.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Body/front arm:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, -6 ), Vector2( 2.50426, -7.61723 ), Vector2( 2.31263, -2.34037 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Body/back arm:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -30.0, -60.0, 30.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Body/back arm:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, -6 ), Vector2( 2.66565, -6.72482 ), Vector2( 2.39912, -3.27404 ), Vector2( 2.17036, -3.34217 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Body:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Position2D/attack/CollisionShape2D:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/10/type = "method"
tracks/10/path = NodePath(".")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_attack_animation_finished"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Attack right"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Body:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 10.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/head:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/head:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/front arm:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -30.0, -60.0, 30.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Body/front arm:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, -6 ), Vector2( 2.50426, -7.61723 ), Vector2( 2.31263, -2.34037 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Body/back arm:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -30.0, -60.0, 30.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Body/back arm:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, -6 ), Vector2( 2.66565, -6.72482 ), Vector2( 2.39912, -3.27404 ), Vector2( 2.17036, -3.34217 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Body:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Position2D/attack/CollisionShape2D:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/10/type = "method"
tracks/10/path = NodePath(".")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_attack_animation_finished"
} ]
}

[sub_resource type="Animation" id=4]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/head:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/head:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/front arm:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 50.0, 60.0, 85.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Body/front arm:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.32715, -1.45676 ), Vector2( 0.872955, -1.45676 ), Vector2( -0.624755, -1.66698 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Body/back arm:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 50.0, 90.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Body/back arm:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.21321, -2.36176 ), Vector2( 1.00442, -2.15154 ), Vector2( 0, -2.12526 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Body:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Player detection zone/CollisionShape2D:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=5]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/head:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/head:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/front arm:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 50.0, 60.0, 85.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Body/front arm:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.32715, -1.45676 ), Vector2( 0.872955, -1.45676 ), Vector2( -0.624755, -1.66698 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Body/back arm:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 50.0, 90.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Body/back arm:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.21321, -2.36176 ), Vector2( 1.00442, -2.15154 ), Vector2( 0, -2.12526 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Body:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Player detection zone/CollisionShape2D:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=6]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0, 10.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/head:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/head:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/front arm:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 50.0, 30.0, 110.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Body/front arm:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.32715, -1.45676 ), Vector2( 2.8, -2.19254 ), Vector2( -2.24888, -1.74708 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Body/back arm:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 50.0, 30.0, 105.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Body/back arm:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.21321, -2.36176 ), Vector2( 2.8, -2.74213 ), Vector2( -0.806086, -2.3761 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Body:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Body:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1.89, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0, -10.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/head:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/head:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/front arm:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 50.0, 30.0, 110.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Body/front arm:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.32715, -1.45676 ), Vector2( 2.8, -2.19254 ), Vector2( -2.24888, -1.74708 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Body/back arm:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 50.0, 30.0, 105.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Body/back arm:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.21321, -2.36176 ), Vector2( 2.8, -2.74213 ), Vector2( -0.806086, -2.3761 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Body:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Body:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.88988, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "dead"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Body:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/head:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/head:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/front arm:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 50.0, 60.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Body/front arm:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.32715, -1.45676 ), Vector2( 0.872955, -1.45676 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Body/back arm:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 50.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Body/back arm:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2.21321, -2.36176 ), Vector2( 1.00442, -2.15154 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Body:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Body:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.243137 ) ]
}
tracks/10/type = "method"
tracks/10/path = NodePath(".")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "dead"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "hurt"

[sub_resource type="CircleShape2D" id=10]
radius = 55.6019

[sub_resource type="CapsuleShape2D" id=11]
radius = 2.64649
height = 7.39087

[sub_resource type="CapsuleShape2D" id=12]
radius = 2.41689
height = 6.54912

[node name="Tallk" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 17
script = ExtResource( 4 )

[node name="Body" type="Sprite" parent="."]
scale = Vector2( -1, 1 )
texture = ExtResource( 3 )
offset = Vector2( 0, -4 )

[node name="head" type="Sprite" parent="Body"]
scale = Vector2( 0.7, 1 )
texture = ExtResource( 1 )
offset = Vector2( 0, -10 )

[node name="front arm" type="Sprite" parent="Body"]
position = Vector2( 0.573413, -1.4988 )
rotation = 1.13446
texture = ExtResource( 2 )

[node name="back arm" type="Sprite" parent="Body"]
show_behind_parent = true
position = Vector2( 0.803536, -2.14628 )
rotation = 1.22173
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Attack left" = SubResource( 2 )
"anims/Attack right" = SubResource( 3 )
"anims/Idle left" = SubResource( 4 )
"anims/Idle right" = SubResource( 5 )
"anims/Run left" = SubResource( 6 )
"anims/Run right" = SubResource( 7 )
anims/dead = SubResource( 8 )
anims/hurt = SubResource( 9 )

[node name="Player detection zone" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 258

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player detection zone"]
shape = SubResource( 10 )

[node name="hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 0, -4.91077 )
shape = SubResource( 11 )

[node name="Timer" type="Timer" parent="."]

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -4 )
rotation = 0.785398

[node name="attack" type="Area2D" parent="Position2D"]
position = Vector2( 0, 4 )
collision_layer = 0
collision_mask = 2147484164
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Position2D/attack"]
position = Vector2( 5, -5 )
shape = SubResource( 12 )
disabled = true

[connection signal="body_entered" from="Player detection zone" to="." method="_on_Player_detection_zone_body_entered"]
[connection signal="body_exited" from="Player detection zone" to="." method="_on_Player_detection_zone_body_exited"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
